objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Frame_Size__c</fullName>
        <label>Frame Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <formula>IF( NOT( ISBLANK(Tonnage_Description__c)),Tonnage_Description__c, Product2.Product_Model_Description__c)</formula>
        <label>Machine Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScrewDiameter__c</fullName>
        <label>Screw Diameter</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tonnage_Description__c</fullName>
        <label>Tonnage Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>